--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ h1 {
 }
 #speech-line{
   position: absolute;
-  top: 42px;
+  top: 44px;
   width: 50%;
   height: 10px;
   border-radius: 5px;
@@ -124,10 +124,11 @@ h1 {
 #speech-title{
   position: relative;
   margin: 0 auto;
+  padding-top: 8px;
   padding-left: 8px;
   font-weight: 900;
-  font-size: 24px;
-  letter-spacing: 3px;
+  font-size: 20px;
+  letter-spacing: 2px;
   color: #FFF;
   text-shadow:
     -2px -2px 0 #474747,
@@ -145,8 +146,8 @@ h1 {
   padding-top: 4px;
   padding-left: 16px;
   font-weight: 700;
-  font-size: 24px;
-  letter-spacing: 3px;
+  font-size: 20px;
+  letter-spacing: 2px;
   color: #FFF;
   text-shadow:
     -2px -2px 0 #474747,
